--- a/introduction.tex
+++ b/introduction.tex
@@ -52,7 +52,7 @@ Here, we survey the literature on (i) security threats that arise from the use o
 
 \subsection{What is Robot?}
 
-While there is no single agreed-upon definition for \defn{robot}, we adopt one given by Murphy~\cite{}, ``\sout{an intelligent robot is} a mechanical creature which can function autonomously''. To expand on the components of this definition further:
+While there is no single agreed-upon definition for \defn{robot}, we adopt one given by Murphy, ``an intelligent robot is a mechanical creature which can function autonomously''. To expand on the components of this definition further:
 
 %We define a robot as a device that can act autonomously without the need for user input to achieve some desired task or goal.  We use the definition of an intelligent robot given by Murphy in her book Introduction to AI Robotics~\cite{}, Leading to three specific constraints:
 
