Fuck the items at the beginning

--- a/introduction.tex
+++ b/introduction.tex
@@ -2,33 +2,33 @@
 
 %Gil_2017 Introduction for data on wireless communication usage to enable awide range of tasks and applications: coverage, disaster management, and concensus.
 
-\maxwell{What is the structure of this paper? Scope seems to large to ever get done; need to narrow focus.}
-The general scope of this survey is wireless security with a focus on attacks in robot networks that are (1)  ``harder'' to defend against than in more-established network settings, and (ii) new and specific to this domain.  The structure of this survey breaks down into the following sections:
-\begin{enumerate}
+%\maxwell{What is the structure of this paper? Scope seems to large to ever get done; need to narrow focus.}
+%The general scope of this survey is wireless security with a focus on attacks in robot networks that are (1)  ``harder'' to defend against than in more-established network settings, and (ii) new and specific to this domain.  The structure of this survey breaks down into the following sections:
+%\begin{enumerate}
 
-\item Introduction with short story/hook, statement of scope, some relevant statistics, points to other closely-related surveys and highlights differences/our contributions, organization of manuscript; aim for 1 page. Section 1 is a good start.
+%\item Introduction with short story/hook, statement of scope, some relevant statistics, points to other closely-related surveys and highlights differences/our contributions, organization of manuscript; aim for 1 page. Section 1 is a good start.
 
-\item Brief review of well-established security threats/adversary goals/known defenses/terminology. Most of this should be pointers to other surveys/textbooks; no more than 2 pages. Section 2 and parts of Section 4 provide a good start to this.
+%\item Brief review of well-established security threats/adversary goals/known defenses/terminology. Most of this should be pointers to other surveys/textbooks; no more than 2 pages. Section 2 and parts of Section 4 provide a good start to this.
 
-\item Old attacks made worse in a new setting; aim for 4 pages. 
-\begin{itemize}
-\item Jamming; mobility
-\item Sybil; again, mobility 
-\item Physical compromise; by their nature as semi-autonomous devices, can be captured.
-\item Sensor data manipulation
-\item Resource concerns; energy for computation is still concern for encryption, spectrum crowded.
-\end{itemize}
+%\item Old attacks made worse in a new setting; aim for 4 pages. 
+%\begin{itemize}
+%\item Jamming; mobility
+%\item Sybil; again, mobility 
+%\item Physical compromise; by their nature as semi-autonomous devices, can be captured.
+%\item Sensor data manipulation
+%\item Resource concerns; energy for computation is still concern for encryption, spectrum crowded.
+%\end{itemize}
 
-\item New attacks specific to robot networks; aim for 3 pages
-\begin{itemize}
-\item Robbing host's home.
-\item Data privacy in the home/hijacked robot
-\item Psychological attacks? (in our paper)
-\item Operating system ROS vulnerabilities
-\item Physical/real-world and anonymous attacks, rather than attacks on a network.
-\end{itemize}
+%\item New attacks specific to robot networks; aim for 3 pages
+%\begin{itemize}
+%\item Robbing host's home.
+%\item Data privacy in the home/hijacked robot
+%\item Psychological attacks? (in our paper)
+%\item Operating system ROS vulnerabilities
+%\item Physical/real-world and anonymous attacks, rather than attacks on a network.
+%\end{itemize}
 
-\end{enumerate}
+%\end{enumerate}
 
 
 
