--- a/root.tex
+++ b/root.tex
@@ -41,8 +41,11 @@
 \title{Security of Wireless Communication For \\Mobile Robot Networks: A Survey}
 
 \author{Christopher~Archibald,
+		Logan~Cummins,
+		Garrett~Fereday,
         John~Grogan,
         Daniel~Rayborn,
+        Nicklaus~Scherer,
         and~Maxwell~Young% <-this % stops a space
 }
 
